Fixed nav bar overlap issue.

--- a/pycon/static/less/responsive-site.less
+++ b/pycon/static/less/responsive-site.less
@@ -180,7 +180,7 @@ body.home {
 	@media (max-width: @breakDesktopXL) {
 		.banner {
 			min-height: 570px;
-	    	padding-top: 70px;
+	    	padding-top: 10px;
 		}
 	}
 	@media (max-width: @breakDesktopXLS) {
@@ -487,6 +487,7 @@ body.cms-page {
 	    padding: 110px 0 10px 0;
 	    martgin-bottom: 20px;
 	    position: relative;
+	    top: -100px;
 	    min-height: 55px;
 	    background-color: white;
 	}
@@ -495,6 +496,7 @@ body.cms-page {
 	    background-size: 100% ;
 	    martgin-bottom: 20px;
 	    position: relative;
+	    top: -100px;
 	    min-height: 55px;
 	    background-color: white;
 	}
