--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -362,6 +362,7 @@ aside {
   padding: 120px 0 10px 0;
   martgin-bottom: 20px;
   position: relative;
+  top: -100px;
   background-color: white;
   min-height: 55px;
 }
@@ -536,7 +537,7 @@ div.DTTT.btn-group {
 ==================== */
 header.main { 
   padding-top: 10px;
-  position: fixed;
+  position: relative;
   width: 100%;
   box-shadow: none;
   .account-bar {
@@ -747,7 +748,7 @@ body.home {
     background-size: contain;
     max-width: 100%;
     min-height: 640px;
-    padding-top: 70px;
+    padding-top: 10px;
     z-index: -1;
     .logo {
       background:url(../img/pycon2015-logo.png) no-repeat 0 0;
